<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingLarge"
    android:paddingBottom="@dimen/paddingSmall"
    android:paddingStart="@dimen/paddingNormal"
    android:paddingEnd="@dimen/paddingNormal"
    android:orientation="vertical">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="@dimen/heightLarge"
       android:layout_gravity="end"
       android:paddingTop="@dimen/paddingNormal"
       android:paddingStart="@dimen/paddingLarge"
       android:paddingEnd="@dimen/paddingNormal"
       android:background="@drawable/form_large_blue"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/textView"
           android:textSize="@dimen/textSizeNormal"
           android:textColor="@color/background" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="@dimen/textSizeNormal"
           android:text="@string/textView1"
           android:textColor="@color/background" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:drawableEndCompat="@drawable/ic_baseline_check_24" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:gravity="end"
        android:padding="@dimen/paddingSmall1"/>
    <LinearLayout
            android:layout_width="@dimen/widthLarge"
            android:layout_height="@dimen/heightNormal"
            android:layout_gravity="end"
            android:paddingTop="@dimen/paddingNormal"
            android:paddingStart="@dimen/paddingLarge"
            android:paddingEnd="@dimen/paddingNormal"
            android:background="@drawable/form_large_blue"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/textView7"
                android:textSize="@dimen/textSizeNormal"
                android:textColor="@color/background"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:drawableEndCompat="@drawable/ic_baseline_check_24" />
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:gravity="end"
        android:padding="@dimen/paddingSmall1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heightLarge"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightLarge"
            android:paddingTop="@dimen/paddingNormal"
            android:paddingStart="@dimen/paddingLarge"
            android:paddingEnd="@dimen/paddingNormal"
            android:background="@drawable/form_large_blue"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView8"
                android:textSize="@dimen/textSizeNormal"
                android:textColor="@color/titleTextColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeNormal"
                android:text="@string/textView9"
                android:textColor="@color/titleTextColor" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView4"
        android:gravity="start"
        android:padding="@dimen/paddingSmall1"/>
    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="@dimen/heightNormal"
        android:layout_gravity="end"
        android:paddingTop="@dimen/paddingNormal"
        android:paddingStart="@dimen/textSizeNormal"
        android:paddingEnd="@dimen/paddingNormal"
        android:background="@drawable/form_large_blue"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/textView6"
            android:textSize="@dimen/textSizeNormal"
            android:textColor="@color/background"
            app:drawableEndCompat="@drawable/emojie" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:drawableEndCompat="@drawable/ic_baseline_check_24" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView5"
        android:gravity="end"
        android:padding="@dimen/paddingSmall1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightNormal"
        android:layout_gravity="end"
        android:paddingTop="@dimen/paddingNormal"
        android:paddingStart="24dp"
        android:paddingEnd="@dimen/paddingNormal"
        android:background="@drawable/form_large_rounded"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon2" />
        <View
            android:layout_width="230dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="32dp"
            android:src="@drawable/icon" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon1" />
    </LinearLayout>
</LinearLayout>